# shape-sorter

./: .gitignore  README.md  pyproject.toml  requirements.txt
jupyter/: project.ipynb
src/: image_generator.py  model_loader.py  trainer.py
