[project]
name = "shape-sorter"
version = "1.0.0"
description = "A neural network to sort digitally drawn shapes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "notebook>=7.4.0",
    "numba>=0.61.2",
    "numpy<=2.2.0",
    "opencv-python>=4.11.0.86",
    "pip>=25.0.1",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
]
