[project]
name = "shape-sorter"
version = "1.1.0"
description = "A neural network to sort digitally drawn shapes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel<=6.30",
    "jupyter<=1.2",
    "notebook<=7.5",
    "numba<=0.62",
    "numpy<=2.2.0",
    "opencv-python<=4.11.1",
    "pip<=26",
    "scikit-learn<=1.7",
    "tensorflow<=2.21.0",
]
